edit and delete working

--- a/myrottenpotatoes/app/views/movies/index.html.haml
+++ b/myrottenpotatoes/app/views/movies/index.html.haml
@@ -7,6 +7,8 @@
       %th Rating
       %th Release Date
       %th More Info
+      %th Edit Movie
+      %th Delete Action
   %tbody
     - @movies.each do |movie|
       %tr
@@ -14,6 +16,8 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
+        %td= link_to "Edit #{movie.title}", movie_path(movie)
+        %td= link_to 'Delete', movie_path(movie), :method => :delete
 = link_to 'Add new movie', new_movie_path
 
 
