--- a/myrottenpotatoes/app/assets/stylesheets/application.css
+++ b/myrottenpotatoes/app/assets/stylesheets/application.css
@@ -22,29 +22,25 @@ html, body {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 10pt;
 }
-
 div#main {
   margin: 0;
   padding: 0 20px 20px;
 }
-
 a {
   background: transparent;
-  color: maroom;
+  color: maroon;
   text-decoration: underline;
   font-weight: bold;
 }
-
 h1 {
-  color: maroom;
+  color: maroon;
   font-size: 150%;
   font-style: italic;
   display: block;
   width: 100%;
   border-bottom: 1px solid DarkSlateGrey;
 }
-
-h1.tile {
+h1.title {
   margin: 0 0 1em;
   padding: 10px;
   background-color: orange;
@@ -53,40 +49,36 @@ h1.tile {
   font-size: 2em;
   font-style: normal;
 }
-
 table#movies {
   margin: 10px;
   border-collapse: collapse;
   width: 100%;
   border-bottom: 2px solid black;
 }
-
 table#movies th {
   border: 2px solid white;
   font-weight: bold;
   background-color: wheat;
 }
-
 table#movies th, table#movies td {
   padding: 4px;
   text-align: left;
 }
-
 #notice, #warning {
   background: rosybrown;
   margin: 1em 0;
   padding: 4px;
 }
-
+.message {
+ color: red:
+ text-align: center;
+}
 form label {
   display: block;
   line-height: 25px;
   font-weight: bold;
-  color: maroom;
+  color: maroon;
 }
-
-  
-  
 
   
 
