--- a/myrottenpotatoes/app/views/movies/show.html.haml
+++ b/myrottenpotatoes/app/views/movies/show.html.haml
@@ -15,3 +15,4 @@
 
 =link_to 'Edit info' , edit_movie_path(@movie)
 =link_to 'Back to the moview list', movies_path 
+=link_to 'Add Review', new_movie_review_path(@movie)
